--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -9,12 +9,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="start.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="nevronopenvision" Version="22.2.15.12" />
     <PackageReference Include="Oracle.ManagedDataAccess" Version="21.5.0" />
     <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="3.21.50" />
     <PackageReference Include="System.Data.Odbc" Version="6.0.0" />
     <PackageReference Include="System.Data.OleDb" Version="6.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="start.png" />
   </ItemGroup>
 
 </Project>
